--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,16 +47,32 @@ android {
 
 dependencies {
 
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation("com.squareup.okhttp3:logging-interceptor:3.9.0")
+    // GSON
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // coroutine
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+
+    // android core
     implementation 'androidx.core:core-ktx:1.8.0'
+
+    // compose
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
+    // injection
     implementation "io.insert-koin:koin-androidx-compose:$koin_version"
     //implementation "io.insert-koin:koin-core:$koin_version"
     //testImplementation "io.insert-koin:koin-test:$koin_version"
+
+    // testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
