--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.testsecuritythierry">
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <permission android:name="android.permission.QUERY_ALL_PACKAGES" />
     <queries>
         <intent>
