--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,9 @@ dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("com.squareup.okhttp3:logging-interceptor:3.9.0")
-    // GSON
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // JSON
+    implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.3'
     // coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
