--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 buildscript {
     ext {
-        compose_compiler_version = '1.5.0'
-        compose_version = '1.4.3'
+        compose_compiler_version = '1.3.0'
+        compose_version = '1.2.1'
+        //compose_compiler_version = '1.5.0'
+        //compose_version = '1.4.3'
         koin_version= "3.2.0"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
