--- a/build.gradle
+++ b/build.gradle
@@ -9,13 +9,15 @@ buildscript {
         compose_compiler_version = '1.5.0'
         // https://developer.android.com/jetpack/androidx/releases/compose-ui
         compose_version = '1.4.3'
-        koin_version= "3.2.0"
+        dagger_version = '2.47'
+        hilt_version = '1.0.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
+    id 'com.google.dagger.hilt.android' version '2.47' apply false
 }
 
 task clean(type: Delete) {
