--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,10 +69,13 @@ dependencies {
     // compose
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
-    //implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
+    // the BOM ensures compatibility between the compose libraries
+    implementation(platform("androidx.compose:compose-bom:2023.06.01"))
+    debugImplementation("androidx.compose.ui:ui-tooling")
+    implementation("androidx.compose.ui:ui-tooling-preview")
 
     // injection
     // Hilt is promotted by Google and it has better runtime performance than Koin
