--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,8 @@ dependencies {
     implementation(platform("androidx.compose:compose-bom:2023.06.01"))
     debugImplementation("androidx.compose.ui:ui-tooling")
     implementation("androidx.compose.ui:ui-tooling-preview")
+    implementation "androidx.paging:paging-runtime:3.1.1"
+    implementation "androidx.paging:paging-compose:3.2.0-rc01"
 
     // injection
     // Hilt is promotted by Google and it has better runtime performance than Koin
