--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,11 +73,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
     // the BOM ensures compatibility between the compose libraries
-    implementation(platform("androidx.compose:compose-bom:2023.06.01"))
-    debugImplementation("androidx.compose.ui:ui-tooling")
-    implementation("androidx.compose.ui:ui-tooling-preview")
+    implementation platform("androidx.compose:compose-bom:2023.06.01")
+    implementation 'androidx.core:core-ktx:1.10.1'
+    debugImplementation "androidx.compose.ui:ui-tooling"
+    implementation "androidx.compose.ui:ui-tooling-preview"
     implementation "androidx.paging:paging-runtime:3.1.1"
     implementation "androidx.paging:paging-compose:3.2.0-rc01"
+    implementation "androidx.paging:paging-common:3.1.1"
 
     // injection
     // Hilt is promotted by Google and it has better runtime performance than Koin
