--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,9 +49,17 @@ android {
         correctErrorTypes true
     }
     namespace 'com.example.testsecuritythierry'
+
+    packagingOptions {
+        exclude 'META-INF/*'
+    }
 }
 
 dependencies {
+    def dagger_version = '2.47'
+    def hilt_version = '1.0.0'
+    def ktor_version = '2.3.2'
+    def logback_version = '1.4.8'
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -60,8 +68,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.3'
     // coroutine
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
 
     // android core
     implementation 'androidx.core:core-ktx:1.10.1'
@@ -81,11 +89,24 @@ dependencies {
     implementation "androidx.paging:paging-compose:3.2.0-rc01"
     implementation "androidx.paging:paging-common:3.1.1"
 
+    // ktor local server to simulate the paging on a real API
+    implementation "io.ktor:ktor-server-core:$ktor_version"
+    implementation "io.ktor:ktor-server-netty:$ktor_version"
+    implementation "io.ktor:ktor-network-tls-certificates:$ktor_version"
+    // logback-android works but logback is not working, even with a resources folder
+    //implementation "ch.qos.logback:logback-classic:$logback_version"
+    //implementation "ch.qos.logback:logback-core:$logback_version"
+    implementation "org.slf4j:slf4j-api:2.0.7"
+    implementation 'com.github.tony19:logback-android:3.0.0'
+    implementation "io.ktor:ktor-server-content-negotiation:$ktor_version"
+    implementation "io.ktor:ktor-serialization-jackson:$ktor_version"
+
     // injection
     // Hilt is promotted by Google and it has better runtime performance than Koin
     implementation "com.google.dagger:hilt-android:$dagger_version"
     kapt "com.google.dagger:hilt-android-compiler:$dagger_version"
     implementation "androidx.hilt:hilt-navigation-compose:$hilt_version"
+    // we chose hilt over koin
     //implementation "io.insert-koin:koin-androidx-compose:$koin_version"
     //implementation "io.insert-koin:koin-core:$koin_version"
     //testImplementation "io.insert-koin:koin-test:$koin_version"
