--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-compose:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation "androidx.navigation:navigation-compose:2.6.0"
     // the BOM ensures compatibility between the compose libraries
     implementation platform("androidx.compose:compose-bom:2023.06.01")
     implementation 'androidx.core:core-ktx:1.10.1'
